homepage and ggmap

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=development
 PORT=8000
 
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyDMYHRWHS-0T7pgR7MrzkYr-vIpzKEWXFk
 GOOGLE_CLIENT_ID='470457956088-4drtpaqcleqobpgnveni17810493q4fs.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET='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'
 GOOGLE_REDIRECT_URI='http://localhost:8000/api/v1/auth/google/callback'
