--- a/configs/database/config.json
+++ b/configs/database/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "12345",
-    "database": "Vietnamese_Culinary_Exploration",
+    "password": "22072002",
+    "database": "vietnam_culinary_exploration",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
