--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "4.18.2",
     "express-flash": "0.0.2",
     "express-session": "1.17.1",
+    "firebase": "^11.0.1",
     "font-awesome": "4.7.0",
     "googleapis": "^140.0.1",
     "jquery": "3.7.1",
@@ -48,10 +49,12 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@react-google-maps/api": "^2.20.3",
     "@types/cookie-parser": "1.4.6",
     "@types/express": "4.17.13",
     "@types/express-flash": "0.0.5",
     "@types/express-session": "1.17.1",
+    "@types/google.maps": "^3.58.1",
     "@types/lodash": "4.17.5",
     "@types/method-override": "0.0.35",
     "@types/multer": "1.4.11",
