--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "1.20.2",
     "bootstrap": "5.3.2",
     "browserify": "17.0.0",
+    "chart.js": "^4.4.7",
     "child_process": "1.0.2",
     "cookie-parser": "1.4.6",
     "dayjs": "^1.11.12",
