--- a/configs/database/config.json
+++ b/configs/database/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": "12345",
+    "username": "postgres",
+    "password": "123456",
     "database": "Vietnamese_Culinary_Exploration",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "host": "localhost",
+    "dialect": "postgres"
   }
 }
