--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "mysql2": "^3.11.3",
     "node-sass": "9.0.0",
     "nodemailer": "6.9.14",
+    "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "pug": "3.0.2",
     "sequelize": "4.28.4",
     "serverless": "3.36.0",
